fix navabar tabs on mobile

--- a/src/sass/layout.css
+++ b/src/sass/layout.css
@@ -128,12 +128,31 @@ body {
     font-weight: bold; }
     @media (min-width: 820px) {
       .faculty-table td:last-child:before {
-        display: none; } }
+        -webkit-display: none; } }
   @media (max-width: 820px) {
     .faculty-table td:last-child {
       margin-bottom: 15px;
       float: left; } }
   .faculty-table td .table-help-btns {
+    margin-right: 10px !important; }
+
+.student-table {
+  -webkit-box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+  background: #867DB0;
+  color: white;
+  overflow: hidden;
+  font-weight: bold; }
+  .student-table td:last-child:before {
+    content: attr(data-th) " ";
+    font-weight: bold; }
+    @media (min-width: 820px) {
+      .student-table td:last-child:before {
+        -webkit-display: none; } }
+  @media (max-width: 820px) {
+    .student-table td:last-child {
+      margin-bottom: 15px;
+      float: left; } }
+  .student-table td .table-help-btns {
     margin-right: 10px !important; }
 
 .subject-table {
@@ -147,7 +166,7 @@ body {
     font-weight: bold; }
     @media (min-width: 820px) {
       .subject-table td:last-child:before {
-        display: none; } }
+        -webkit-display: none; } }
   @media (max-width: 820px) {
     .subject-table td:last-child {
       margin-bottom: 15px;
@@ -169,7 +188,7 @@ body {
     font-weight: bold; }
     @media (min-width: 820px) {
       .groups-table td:last-child:before {
-        display: none; } }
+        -webkit-display: none; } }
   @media (max-width: 820px) {
     .groups-table td:last-child {
       margin-bottom: 15px;
@@ -219,6 +238,7 @@ body {
     width: 1px; }
 
 .add-edit-admin-table {
+  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
   background: #867DB0;
   color: #fff;
   overflow: hidden;
@@ -257,7 +277,7 @@ div.row.schedule-form {
 [ng-messages] {
   color: red;
   font-size: 1em;
-  display:none; }
+  display: none; }
 
 [ng-messages].ng-active {
   opacity: 0;
@@ -269,7 +289,7 @@ div.row.schedule-form {
   transition: opacity .3s linear, top .3s linear, visibility .3s linear; }
 
 [ng-messages].show-messages {
-  display:inline-block;
+  display: inline-block;
   opacity: 1; }
 
 [ng-message].ng-enter.ng-enter-active {
